Stop word wrap on long layer titles

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -101,6 +101,10 @@ li.theme-item.open {
   }
 }
 
+.layer-item{
+  white-space: nowrap;
+}
+
 /*
 .themes-nav.nav > li.layer-item > a {
   display:block;
